--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 		.header{
 		  /*background: rgba(98,95,38, 0.7);*/
-			background: var(--toBlack-3);
+			background: var(--toBlack-1);
 		  height: 21mm;
 		  width: 210mm;
 		}
@@ -386,23 +386,23 @@ content:'\f09b';
 		<h6>Data Acquisition</h6>
 		<p class="skills">SQL, Hive, Hadoop, Web Scraping, APIs, Telematics</p>
 		<h6>Data Preparation</h6>
-		<p class="skills">R, Python, Alteryx, Statistical, Explanatory Data Aanlysis</p>
+		<p class="skills">R, Python, Alteryx, Statistical, Explanatory Data Analysis</p>
 		<h6>Modelling</h6>
-		<p class="skills">Regression, Image Recognition, Machine Learning, Natural Langauge Processing, Data Robot</p>
+		<p class="skills">Regression, Image Recognition, Machine Learning, Natural Language Processing, Data Robot</p>
 		<h6>Evaluation</h6>
-		<p class="skills">Hypothesis Testing, Probabillity Distribution, Correlation Matrix, Confusion Matrix</p>
+		<p class="skills">Hypothesis Testing, Probability Distribution, Correlation Matrix, Confusion Matrix</p>
 		<h6>Visualisation</h6>
 		<p class="skills">Story Telling, Tableau, QlikView/Sense, Shiny</p>
 		<h6>Deployment</h6>
-		<p class="skills">Markdown , Quarto, Google Cloud, GitHub, Rstudio Connect</p>
+		<p class="skills">Markdown , Quarto, Google Cloud, GitHub, RStudio Connect</p>
 		
 		<br>
 		<hr class="side-hr">
 		<br>
 		<h5>Community Engagement</h5>
 		<h6>STEM</h6>
-		<p class="skills">An active STEM ambassador for several years, and have parcipiated in Primary Egnineer for the previous five years</p>
-		<h6>Vounteering</h6>
+		<p class="skills">An active STEM ambassador for several years, and have participated in Primary Engineer for the previous five years</p>
+		<h6>Volunteering</h6>
 		<p class="skills">Hosted the Ho-Ho-Hospice event for the previous three years</p><br>
 		<p class="skills">Provide education and career via public speaking events through Future First</p>
 		
@@ -412,7 +412,7 @@ content:'\f09b';
 		
 		<div>
 		  <a class="popup" href="javascript:window.print()"><span>Print</span></a>
-		  <a class="popup" href="MarkUstel.pdf" download="MarkUstek" target="_blank"><span>Download a PDF copy</span></a>
+		  <a class="popup" href="MarkUstel.pdf" download="MarkUstel" target="_blank"><span>Download a PDF copy</span></a>
 		  <a class="popup" href="https://linkedin.com/in/mark-ustel-1342b067" target="_blank"><span>Connect with me</span></a>
 		  <a class="popup" href="https://mark-ustel.github.io/me/" target="_blank"><span>Dashboard Version!</span></a>
 		</div>
@@ -441,7 +441,7 @@ content:'\f09b';
 		  	<li>Delivered analysis to identify and support a $3M cost saving on a high performance vehicle</li>
 		  	<li>Scaled a dashboard from 10k vehicles to over 6M</li>
 			<li>Simplified an existing query and dashboard to aggregate all analytics, including regression modelling, server side which reduced the dataframe from over 650M to less than 3k</li>
-			<li>Spearheaded the cloud magration for query, analytics, machine larning and dashboarding</li>
+			<li>Spearheaded the cloud migration for query, analytics, machine learning and dashboarding</li>
 		</ul>
 		
 		<h3>Data Scientist</h3>
@@ -450,10 +450,10 @@ content:'\f09b';
 			<h4 class = "right">April-'19 to October-'20</h4>
 		</div>
 		<ul>
-			<li>&nbsp;Improved project completion rate by 30%, and reduced project time by 2 months ultilising Design Thinking methodologies</li>
+			<li>&nbsp;Improved project completion rate by 30%, and reduced project time by 2 months utilising Design Thinking methodologies</li>
 		  	<li>Conceptualized machine learning (PCA) to identified  $45M  and delivered over $6M cost saving</li>
 		  	<li>Formulated a natural language processing algorithm to analyse over 17k ideas generated</li>
-			<li>Redesigned the interface for idea generation which doubled the number of ideas submitted whilst greatly enhancing customer satifiaction</li>
+			<li>Redesigned the interface for idea generation which doubled the number of ideas submitted whilst greatly enhancing customer satisfaction</li>
 		  	<li>Analysed and published a dashboard for diesel injector prognosis worth an estimated $2M</li>
 		</ul>
 		
@@ -465,8 +465,8 @@ content:'\f09b';
 		<ul>
 			<li>Proud inventor and author of a patent for Adaptively Controlling a Motor Vehicle Engine System</li>
 		  	<li>The first person to test, analyse and implement dual injection strategy on a European application at Ford which yielded a 1% improvement in fuel economy and a 7% uplift in torque</li>
-		  	<li>Created a tool to analyse overfuelling which enabled fuelling levels to be reduced by 12%</li>
-			<li>Ultilising big data and developing alogirthms helped successfully predict the hardware changes required to meet upcomping legislated C02 limits</li>
+		  	<li>Created a tool to analyse over-fuelling which enabled fuelling levels to be reduced by 12%</li>
+			<li>Utilising big data and developing algorithms helped successfully predict the hardware changes required to meet upcoming legislated C02 limits</li>
 		</ul>
 		
 		<h3>Data Analyst</h3>
@@ -476,9 +476,9 @@ content:'\f09b';
 		</div>
 		<ul>
 			<li>Invented a program to analyse and categorise fuel consumption delta that is still being utilised globally</li>
-		  	<li>Succesfully developed algorithms to identify dynamic valve events</li>
-		  	<li>Developed a software stragety to improve idle combustion stability by over 50%</li>
-			<li>Remotely investigated and resolved an assembly production error that caused the plant to shutdown for 10 days</li>
+		  	<li>Successfully developed algorithms to identify dynamic valve events</li>
+		  	<li>Developed a software strategy to improve idle combustion stability by over 50%</li>
+			<li>Remotely investigated and resolved an assembly production error that caused the plant to stop for 10 days</li>
 		</ul>
 		
 		<h3>Systems Engineer Team Leader</h3>
@@ -502,8 +502,8 @@ content:'\f09b';
 		</div>
 		<ul>
 			<li>Instantiate parts in Enovia to ensure timely part procurement to reverse delays worth in excess of $100M</li>
-		  	<li>Interpretting engineering drawings to amend a variety of aircraft documentation</li>
-		  	<li>Authoring technical publications using Framemaker</li>
+		  	<li>Interpreting engineering drawings to amend a variety of aircraft documentation</li>
+		  	<li>Authoring technical publications using FrameMaker</li>
 		</ul>
 		<p class = "footer"><i>Made entirely with HTML, CSS and JavaScript</i></p>
 
