--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <link rel="icon" href="logo.png">
 	<style>
 		
 		:root {
@@ -117,7 +118,7 @@
 		.left{
 			text-align: left;
 			font-size: 12px !important;
-			width: 138mm;
+			width: 100%;
 			color: var(--toBlack-3);
 			/*border: 1px solid red;*/
 		}
@@ -313,7 +314,7 @@ content:'\f09b';
 <meta charset="utf-8">
 <script src="https://kit.fontawesome.com/c131cf1607.js" crossorigin="anonymous"></script>
 	
-<title>MarkUstel</title>
+<title>Mark Ustel</title>
 </head>
 
 <body>
@@ -325,7 +326,7 @@ content:'\f09b';
     
     <div class="sidebar">
 		
-		<h5>Contact Me</h5>
+		<h5>Contact</h5>
 		<br>
 		
 		<div class="row">
@@ -333,7 +334,7 @@ content:'\f09b';
 				<i class="fa-solid fa-circle-user"></i>
 			</div>
 			<div class="iconText">
-				 He / Him
+				 Mark Ustel
 			</div>		
 		</div>
 		
@@ -368,54 +369,55 @@ content:'\f09b';
 				<i class="fa-solid fa-location-dot"></i>
 			</div>
 			<div class="iconText">
-				Harlow, Essex, UK
+				Bishop's Stortford
 			</div>
 		</div>		
 		
 		<br>
 		<hr class="side-hr">
 		<br>
-		<h5>Education</h5>
+		<h5>Education</h5><br>
 		<p class="skills"><b>Bachelor of Engineering</b></p>
+		<p class="skills">Upper Second (hons)</p>
 		<p class="skills"><i><small>University of Hertfordshire</small></i></p>
 		<p class="skills"><i>2003 - 2006</i></p>
 		<br>
+		<p class="skills"><b>A Levels</b></p>
+		<p class="skills">Mathematics (A), Chemistry (B), Physics (C)</p>
+		<br>
+		<hr class="side-hr">
+		<br>
 		<h5>Skills</h5>
 		<h6>Empathise</h6>
-		<p class="skills">UX, Design Thinking, CX</p>
-		<h6>Data Acquisition</h6>
-		<p class="skills">SQL, Hive, Hadoop, Web Scraping, APIs, Telematics</p>
-		<h6>Data Preparation</h6>
-		<p class="skills">R, Python, Alteryx, Statistical, Explanatory Data Analysis</p>
+		<p class="skills">Design Thinking, UX, Workshop</p>
+		<h6>Extraction</h6>
+		<p class="skills">SQL, Web Scraping, APIs, Telematics, Apache Hive</p>
+		<h6>Preparation</h6>
+		<p class="skills">R, Python, Alteryx, Exploratory Data Analysis</p>
 		<h6>Modelling</h6>
-		<p class="skills">Regression, Image Recognition, Machine Learning, Natural Language Processing, Data Robot</p>
-		<h6>Evaluation</h6>
-		<p class="skills">Hypothesis Testing, Probability Distribution, Correlation Matrix, Confusion Matrix</p>
+		<p class="skills">Machine Learning, statistical Analysis, Correlation, Natural Language Processing</p>
 		<h6>Visualisation</h6>
-		<p class="skills">Story Telling, Tableau, QlikView/Sense, Shiny</p>
+		<p class="skills">Shiny, Looker Studio, Tableau, PowerBI, QlikSense, Story Telling with Data</p>
 		<h6>Deployment</h6>
-		<p class="skills">Markdown , Quarto, Google Cloud, GitHub, RStudio Connect</p>
+		<p class="skills">Posit Connect, ShinyApps, Cloud Computing-GCP, AWS, Azure</p>
 		
 		<br>
 		<hr class="side-hr">
 		<br>
-		<h5>Community Engagement</h5>
-		<h6>STEM</h6>
-		<p class="skills">An active STEM ambassador for several years, and have participated in Primary Engineer for the previous five years</p>
-		<h6>Volunteering</h6>
-		<p class="skills">Hosted the Ho-Ho-Hospice event for the previous three years</p><br>
-		<p class="skills">Provide education and career via public speaking events through Future First</p>
+		<h5>Community</h5>
+		<br>
+		<p class="skills">A STEM ambassador, coaching teams in Primary Engineer.</p><br>
+		<p class="skills">Hosted the Ho-Ho-Hospice annual event.</p><br>
+		<p class="skills">Engage in interviews and Q&A public events through Future First to inspire the next generation.</p>
 		
 		<br>
-		<hr class="side-hr">
-		<br>
 		
-		<div>
+		<!--<div>
 		  <a class="popup" href="javascript:window.print()"><span>Print</span></a>
 		  <a class="popup" href="MarkUstel.pdf" download="MarkUstel" target="_blank"><span>Download a PDF copy</span></a>
 		  <a class="popup" href="https://linkedin.com/in/mark-ustel-1342b067" target="_blank"><span>Connect with me</span></a>
 		  <a class="popup" href="https://mark-ustel.github.io/me/" target="_blank"><span>Dashboard Version!</span></a>
-		</div>
+		</div>-->
 		
 		
     </div>
@@ -423,96 +425,86 @@ content:'\f09b';
     <div class="main">
 		<br>
 		<div class="separator">
-			<p class="left summary">
-		    Passionate and inquisitive analytically minded  <big>Data Scientist</big>, strongly believing in the infusion of Data Science with <big>Design Thinking</big>.  Combining strengths from both approaches ensures  focus on the customer and problem definition, whilst delivering a <big>creative</big> and highly <big>analytical</big> solution with tangible and quantifiable outcomes. An experienced user of both <big>R</big> and <big>Python</big>, having a strong bias towards R due to its superior statistical ability and interactive web apps in Shiny.</p>
-			
-			<p><a href="https://mark-ustel.github.io/me/" target="_blank"><img  class="img" src="me.jpg" alt="Image of Mark Ustel" title = "Visit my alternative CV"></a></p>
-			
-			
+			<p class="left summary">A passionate and analytically driven professional who thrives infusing data with creativity and innovation to deliver unique and impactful solutions. As a founder of the high-performing Data Science and Analytics team within Connected Vehicles at Ford, I leveraged advanced analytics, and machine learning to drive innovation in vehicle connectivity. Building on this success, I established Ustel Studio — a data science consultancy where I blend analytical expertise with creative innovation, offering bespoke, tailored solutions to clients through consulting and hands-on delivery.</p>
+		
 		</div>
+		
+		<h3>Principal Data Scientist</h3>
+		<div class="separator">
+			<h4 class = "left">Ford Motor Company - Connected Vehicles</h4>
+			<h4 class = "right">Oct 20 to present</h4>
+		</div>
+		<ul>
+      <li>Delivered in-depth analysis that identified over $3M in cost savings.</li>
+      <li>Developed a statistical web application that prevented £1M+ in lost profit.</li>
+      <li>Scaled a critical dashboard from 10,000 to 6M+ users, ensuring seamless performance.</li>
+      <li>Led a successful cloud migration to enhance scalability and data processing.</li>
+      <li>Played a pivotal role in shaping data governance for connected vehicle data, ensuring compliance and quality standards.</li>    
+		</ul>
+		
+		<h3>Founder</h3>
+	  <div class="separator">
+			<h4 class = "left">Ustel Studio - Data Science Consultancy</h4>
+			<h4 class = "right">Mar 23 to presert</h4>
+		</div>
+		<ul>
+			<li>Delivered bespoke dashboards that enhanced operational efficiency and decision-making.</li>
+      <li>Identified and implemented automated processes, reducing manual effort and improving accuracy.</li>
+      <li>Provided expert training and guidance on regulation, AI adoption, and navigating the evolving analytics landscape.</li>
+    </ul>
 		
 		<h3>Senior Data Scientist</h3>
 		<div class="separator">
-			<h4 class = "left">Ford - Connected Vehicles</h4>
-			<h4 class = "right">October-'20 to present</h4>
+			<h4 class = "left">IBM - Innovation Lab (partnered with FMC)</h4>
+			<h4 class = "right">Apr 19 to Oct 20</h4>
 		</div>
 		<ul>
-			<li>Developed a statistical based webapp that prevented £1M in buy backs</li>
-		  	<li>Delivered analysis to identify and support a $3M cost saving on a high performance vehicle</li>
-		  	<li>Scaled a dashboard from 10k vehicles to over 6M</li>
-			<li>Simplified an existing query and dashboard to aggregate all analytics, including regression modelling, server side which reduced the dataframe from over 650M to less than 3k</li>
-			<li>Spearheaded the cloud migration for query, analytics, machine learning and dashboarding</li>
+			<li>Identified $45M in potential value using big data and machine learning algorithms, contributing to over $6M in cost savings.</li>
+      <li>Improved project completion rate by 30% and reduced project time by over 2 months through the application of design thinking methodologies.</li>
+      <li>Streamlined internal processes by implementing natural language processing (NLP) solutions.</li>
+      <li>Developed a bespoke web application that enhanced customer satisfaction, leading to a two-fold increase in idea submissions.</li>
+      <li>Led a team to analyse and publish a prognosis dashboard, resulting in an estimated $2M in savings.</li>
 		</ul>
 		
-		<h3>Data Scientist</h3>
-	  <div class="separator">
-			<h4 class = "left">Ford - Innovation Lab</h4>
-			<h4 class = "right">April-'19 to October-'20</h4>
-		</div>
-		<ul>
-			<li>&nbsp;Improved project completion rate by 30%, and reduced project time by 2 months utilising Design Thinking methodologies</li>
-		  	<li>Conceptualized machine learning (PCA) to identified  $45M  and delivered over $6M cost saving</li>
-		  	<li>Formulated a natural language processing algorithm to analyse over 17k ideas generated</li>
-			<li>Redesigned the interface for idea generation which doubled the number of ideas submitted whilst greatly enhancing customer satisfaction</li>
-		  	<li>Analysed and published a dashboard for diesel injector prognosis worth an estimated $2M</li>
-		</ul>
-		
-		<h3>Senior Data Analyst</h3>
+		<h3>Senior Data Analyst → Team Leader</h3>
 		<div class="separator">
-			<h4 class = "left">Ford - Engine Development</h4>
-			<h4 class = "right">March-'16 to April-'19</h4>
+			<h4 class = "left">Ford Motor Company - Engine Development</h4>
+			<h4 class = "right">Aug 11 to Apr 19</h4>
 		</div>
 		<ul>
-			<li>Proud inventor and author of a patent for Adaptively Controlling a Motor Vehicle Engine System</li>
-		  	<li>The first person to test, analyse and implement dual injection strategy on a European application at Ford which yielded a 1% improvement in fuel economy and a 7% uplift in torque</li>
-		  	<li>Created a tool to analyse over-fuelling which enabled fuelling levels to be reduced by 12%</li>
-			<li>Utilising big data and developing algorithms helped successfully predict the hardware changes required to meet upcoming legislated C02 limits</li>
+			<li>Proud inventor and author of a patent for Adaptively Controlling a Motor Vehicle Engine System.</li>
+      <li>Led the first analysis and implementation of a dual injection</li> strategy, improving fuel economy by 1% and increasing torque by 7%.
+      <li>Invented a bespoke global program used to analyze fuel economy, driving efficiency improvements.</li>
+      <li>Led the global transition to big data adoption for predictive modeling, enabling compliance with new legislation and developing a novel algorithm to identify dynamic valve events.</li>
+      <li>Developed a software strategy that improved idle combustion stability by over 50%.</li>
 		</ul>
 		
-		<h3>Data Analyst</h3>
+		<h3>System Engineer → Team Leader</h3>
 		<div class="separator">
-			<h4 class = "left">Ford - Engine Development</h4>
-			<h4 class = "right">August-'11 to March-'16</h4>
+			<h4 class = "left">Delphi Diesel Systems - Research & Development</h4>
+			<h4 class = "right">Feb 08 to Jul 11</h4>
 		</div>
 		<ul>
-			<li>Invented a program to analyse and categorise fuel consumption delta that is still being utilised globally</li>
-		  	<li>Successfully developed algorithms to identify dynamic valve events</li>
-		  	<li>Developed a software strategy to improve idle combustion stability by over 50%</li>
-			<li>Remotely investigated and resolved an assembly production error that caused the plant to stop for 10 days</li>
-		</ul>
-		
-		<h3>Systems Engineer Team Leader</h3>
-		<div class="separator">
-			<h4 class = "left">Delphi - Engine Testing</h4>
-			<h4 class = "right">February-'08 to July-'11</h4>
-		</div>
-		<ul>
-			<li>PID tuning enabled operating systems to have four times the lifespan</li>
-		  	<li>Created post processed and real time automated data quality checks saving over £2M</li>
-		  	<li>Developed a script that automatically writes test procedures saving over £115k pa</li>
-			<li>Implemented DOE testing strategy which reduced optimisation on a single cylinder engine by 2 months</li>
-		  	<li>Installed, configured and maintained systems which yielded a 15% increase in uptime and a £10k cost saving</li>
-			<li>Created and hosted several training courses in statistics and analytics</li>
+			<li>Created real-time automated data quality checks, resulting in annual savings of over £2M.</li>
+      <li>Developed a program to automatically generate test procedures, saving more than £115K per year.</li>v
+      <li>Implemented a DOE testing strategy that reduced optimization time on a single-cylinder research engine by over 2 months.</li>
+      <li>Conducted PID tuning on test facilities, extending lifespan by 4x.</li>
+      <li>Installed, configured, and calibrated a system that achieved a 15% increase in uptime and delivered an additional £10K per year in cost savings.</li>
 		</ul>
 		
 		<h3>Technical Author</h3>
 		<div class="separator">
 			<h4 class = "left">Boeing - CAD Integration</h4>
-			<h4 class = "right">September-07 to February-08</h4>
+			<h4 class = "right">Sep 07 to Feb 08</h4>
 		</div>
 		<ul>
-			<li>Instantiate parts in Enovia to ensure timely part procurement to reverse delays worth in excess of $100M</li>
-		  	<li>Interpreting engineering drawings to amend a variety of aircraft documentation</li>
-		  	<li>Authoring technical publications using FrameMaker</li>
+			<li>Instantiated parts in Enovia to ensure timely part procurement, preventing delays that could have cost over $100M.</li>
+      <li>Analysed service and safety bulletins alongside engineering drawings to amend and update aircraft documentation.</li>
 		</ul>
-		<p class = "footer"><i>Made entirely with HTML, CSS and JavaScript</i></p>
 
     </div>
 	  
-	  
-	  
   </page>
 </body>
-
 
 </html>
