--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ content:'\f09b';
 		<h6>Preparation</h6>
 		<p class="skills">R, Python, Alteryx, Exploratory Data Analysis</p>
 		<h6>Modelling</h6>
-		<p class="skills">Machine Learning, statistical Analysis, Correlation, Natural Language Processing</p>
+		<p class="skills">Machine Learning, Statistical Analysis, Correlation, Natural Language Processing</p>
 		<h6>Visualisation</h6>
 		<p class="skills">Shiny, Looker Studio, Tableau, PowerBI, QlikSense, Story Telling with Data</p>
 		<h6>Deployment</h6>
@@ -411,16 +411,7 @@ content:'\f09b';
 		<p class="skills">Engage in interviews and Q&A public events through Future First to inspire the next generation.</p>
 		
 		<br>
-		
-		<!--<div>
-		  <a class="popup" href="javascript:window.print()"><span>Print</span></a>
-		  <a class="popup" href="MarkUstel.pdf" download="MarkUstel" target="_blank"><span>Download a PDF copy</span></a>
-		  <a class="popup" href="https://linkedin.com/in/mark-ustel-1342b067" target="_blank"><span>Connect with me</span></a>
-		  <a class="popup" href="https://mark-ustel.github.io/me/" target="_blank"><span>Dashboard Version!</span></a>
-		</div>-->
-		
-		
-    </div>
+</div>
     
     <div class="main">
 		<br>
@@ -437,7 +428,7 @@ content:'\f09b';
 		<ul>
       <li>Delivered in-depth analysis that identified over $3M in cost savings.</li>
       <li>Developed a statistical web application that prevented £1M+ in lost profit.</li>
-      <li>Scaled a critical dashboard from 10,000 to 6M+ users, ensuring seamless performance.</li>
+      <li>Scaled a critical dashboard from 10,000 to 6M+ vehicles, ensuring seamless performance.</li>
       <li>Led a successful cloud migration to enhance scalability and data processing.</li>
       <li>Played a pivotal role in shaping data governance for connected vehicle data, ensuring compliance and quality standards.</li>    
 		</ul>
@@ -445,7 +436,7 @@ content:'\f09b';
 		<h3>Founder</h3>
 	  <div class="separator">
 			<h4 class = "left">Ustel Studio - Data Science Consultancy</h4>
-			<h4 class = "right">Mar 23 to presert</h4>
+			<h4 class = "right">Mar 23 to present</h4>
 		</div>
 		<ul>
 			<li>Delivered bespoke dashboards that enhanced operational efficiency and decision-making.</li>
@@ -473,9 +464,9 @@ content:'\f09b';
 		</div>
 		<ul>
 			<li>Proud inventor and author of a patent for Adaptively Controlling a Motor Vehicle Engine System.</li>
-      <li>Led the first analysis and implementation of a dual injection</li> strategy, improving fuel economy by 1% and increasing torque by 7%.
-      <li>Invented a bespoke global program used to analyze fuel economy, driving efficiency improvements.</li>
-      <li>Led the global transition to big data adoption for predictive modeling, enabling compliance with new legislation and developing a novel algorithm to identify dynamic valve events.</li>
+      <li>Led the first analysis and implementation of a dual injection strategy, improving fuel economy by 1% and increasing torque by 7%.</li> 
+      <li>Invented a bespoke global program used to analyse fuel economy, driving efficiency improvements.</li>
+      <li>Led the global transition to big data adoption for predictive modelling, enabling compliance with new legislation and developing a novel algorithm to identify dynamic valve events.</li>
       <li>Developed a software strategy that improved idle combustion stability by over 50%.</li>
 		</ul>
 		
@@ -486,7 +477,7 @@ content:'\f09b';
 		</div>
 		<ul>
 			<li>Created real-time automated data quality checks, resulting in annual savings of over £2M.</li>
-      <li>Developed a program to automatically generate test procedures, saving more than £115K per year.</li>v
+      <li>Developed a program to automatically generate test procedures, saving more than £115K per year.</li>
       <li>Implemented a DOE testing strategy that reduced optimization time on a single-cylinder research engine by over 2 months.</li>
       <li>Conducted PID tuning on test facilities, extending lifespan by 4x.</li>
       <li>Installed, configured, and calibrated a system that achieved a 15% increase in uptime and delivered an additional £10K per year in cost savings.</li>
