--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 		}
 		
 		@media print {
-    /*html, page{
+    html, page{
         width: 210;
         height: 297mm;
         margin: 0mm;
-   } */
+   }
 	.sidebar{
 		background: rgb(180,184,185);
 	}
