--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
 			--toBlack-5: #060c11;
 		}
 	
-		
+		@media print {
+    /*html, page{
+        width: 210;
+        height: 297mm;
+        margin: 0mm;*/
+   } 
 	.sidebar{
 		background: rgb(180,184,185);
 	}
+}
 
 		body {
 		  background: rgb(204,204,204); 
