--- a/index.html
+++ b/index.html
@@ -17,20 +17,19 @@
 			--toBlack-4: #0b151c;
 			--toBlack-5: #060c11;
 		}
-	
-		@media print {
-    /*html, page{
+	@media print {
+    html, page{
         width: 210;
         height: 297mm;
-        margin: 0mm;*/
-   } 
+        margin: 0mm;
+   }
 	.sidebar{
 		background: rgb(180,184,185);
 	}
 }
 
 		body {
-		  background: rgb(255,255,255); 
+		  background: rgb(204,204,204); 
 		  font-family: Helvetica;
 		}
 
