--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 			--toBlack-5: #060c11;
 		}
 	@media print {
-    html, page{
+    /*html, page{
         width: 210;
         height: 297mm;
-        margin: 0mm;
+        margin: 0mm;*/
    }
 	.sidebar{
 		background: rgb(180,184,185);
