--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+
 <!doctype html>
 <html>
 <head>
-  <link rel="icon" href="logo.png">
+  <link rel="icon" href="icon.png">
 	<style>
 		
 		:root {
@@ -19,11 +20,11 @@
 		}
 		
 		@media print {
-    html, page{
+    /*html, page{
         width: 210;
         height: 297mm;
         margin: 0mm;
-   }
+   } */
 	.sidebar{
 		background: rgb(180,184,185);
 	}
@@ -397,9 +398,9 @@ content:'\f09b';
 		<h6>Modelling</h6>
 		<p class="skills">Machine Learning, Statistical Analysis, Correlation, Natural Language Processing</p>
 		<h6>Visualisation</h6>
-		<p class="skills">Shiny, Looker Studio, Tableau, Power BI, QlikSense, Story Telling with Data</p>
+		<p class="skills">Shiny, Looker Studio, Tableau, PowerBI, QlikSense, Story Telling with Data</p>
 		<h6>Deployment</h6>
-		<p class="skills">Posit Connect, ShinyApps, Cloud Computing incl. GCP, AWS, Azure</p>
+		<p class="skills">Posit Connect, ShinyApps, Cloud Computing-GCP, AWS, Azure</p>
 		
 		<br>
 		<hr class="side-hr">
@@ -411,8 +412,7 @@ content:'\f09b';
 		<p class="skills">Engage in interviews and Q&A public events through Future First to inspire the next generation.</p>
 		
 		<br>
-		
-    </div>
+</div>
     
     <div class="main">
 		<br>
@@ -429,7 +429,7 @@ content:'\f09b';
 		<ul>
       <li>Delivered in-depth analysis that identified over $3M in cost savings.</li>
       <li>Developed a statistical web application that prevented £1M+ in lost profit.</li>
-      <li>Scaled a critical dashboard from 10,000 to 6M+ users, ensuring seamless performance.</li>
+      <li>Scaled a critical dashboard from 10,000 to 6M+ vehicles, ensuring seamless performance.</li>
       <li>Led a successful cloud migration to enhance scalability and data processing.</li>
       <li>Played a pivotal role in shaping data governance for connected vehicle data, ensuring compliance and quality standards.</li>    
 		</ul>
@@ -437,7 +437,7 @@ content:'\f09b';
 		<h3>Founder</h3>
 	  <div class="separator">
 			<h4 class = "left">Ustel Studio - Data Science Consultancy</h4>
-			<h4 class = "right">Mar 23 to presert</h4>
+			<h4 class = "right">Mar 23 to present</h4>
 		</div>
 		<ul>
 			<li>Delivered bespoke dashboards that enhanced operational efficiency and decision-making.</li>
